<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq1"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="none" />

    <TextView
        android:id="@+id/tv2"
        android:layout_below="@id/tv1"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fans1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_below="@id/tv2"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq2" />

    <TextView
        android:id="@+id/tv4"
        android:layout_below="@id/tv3"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fans2" />

    <TextView
        android:id="@+id/tv5"
        android:layout_below="@id/tv4"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq3" />

    <TextView
        android:id="@+id/tv6"
        android:layout_below="@id/tv5"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fans3" />
</RelativeLayout>