<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MelanomaClassification">

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:layout_weight="0.73"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_skin_rotated" />

                <LinearLayout
                    android:layout_weight="0.50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"
                        android:gravity="bottom"
                        android:text="@string/mtitle"
                        android:textSize="24sp" />
                    <TextView
                        android:id="@+id/txtDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:text="@string/mdesc"
                        android:layout_weight="0.50"/>
                </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.27"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:background="@drawable/custom_btn1"
                android:text="Open Camera"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtq1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.16"
                android:text="@string/mq1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtans1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.11"
                android:text="@string/mans1"
                android:textStyle="italic" />

        <TextView
            android:layout_weight="0.16"
            android:id="@+id/txtq2"
            android:text="@string/mq2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"/>
        <TextView
            android:layout_weight="0.15"
            android:id="@+id/txtans2"
            android:text="@string/mans2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="italic"/>

        <TextView
            android:layout_weight="0.16"
            android:id="@+id/txtq3"
            android:text="@string/mq3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"/>
        <TextView
            android:layout_weight="0.11"
            android:id="@+id/txtans3"
            android:text="@string/mans3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>