<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_diagnosis" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:layout_weight="0.33"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textColorHint="#3E3E3E" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:layout_weight="0.33"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="#3E3E3E" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.33"
                android:textColor="#3E3E3E"
                android:background="@drawable/custom_btn1"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#3E3E3E"
                android:background="@drawable/custom_btn1"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#3E3E3E"
                android:background="@drawable/custom_btn1"
                android:text="@string/skip" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>